[workspace]
members = ["deep-quant-engine", "deep-quant-helper", "deep-quant-python"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["<Husky> <husky.robot.dog@gmail.com>"]
description = "deep-quant"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/huskyrobotdog/deep-quant"
readme = "README.md"

[profile.release]
codegen-units = 1
debug = false
lto = true
strip = true
opt-level = "z"
panic = 'abort'
overflow-checks = false
debug-assertions = false
incremental = false

[workspace.dependencies]
deep-quant-engine = { path = "./deep-quant-engine" }
tokio = { version = "1.43", features = ["full"] }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["local-time", "json"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = { version = "1.20" }
rayon = { version = "1.10" }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
uuid = { version = "1.12", features = ["v4", "fast-rng", "macro-diagnostics"] }
homedir = { version = "0.3" }
derive_builder = { version = "0.20" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }
strum = { version = "0.27", features = ["derive"] }
csv-async = { version = "1.3", features = ["tokio"] }
async_zip = { version = "0.0.17", features = ["full"] }
parking_lot = { version = "0.12" }
nu-ansi-term = { version = "0.50" }
rust_decimal = { version = "1.36", features = ["serde", "serde-with-float"] }
rust_decimal_macros = { version = "1.36" }
config = { version = "0.15", features = ["yaml"] }
thiserror = { version = "2" }
pyo3 = { version = "0.23.3", features = ["full"] }
