[package]
name = "deep-quant-python"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "deep_quant_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
