[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "deep-quant-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "authors", "description", "readme"]
license = { file = "../LICENSE" }
dependencies = ["pandas==2.2.3"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "deep_quant.deep_quant_python"
